# mag-reader

./: .env.example  .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: PUBLISHING.md
proxy/: worker.js
public/: background.js  manifest.json  manifest.webmanifest  sw.js
scripts/: build-firefox.mjs  demo.mjs  gen-icons.mjs  gen-promo.mjs  gen-store-shots.mjs  shots.mjs
src/: App.jsx  discover.js  feeds.js  main.jsx  net.js  opml.js  readerMode.js  rss.js  sanitize.js  storage.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
store/: listing.md
test/: headless.mjs
