[package]
name = "readstand"
version = "0.1.0"
description = "Readstand: a clean, unified feed of the magazines and blogs you follow."
authors = ["TitasDas"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
